argoCD/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayane-utau-site
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ayane-utau-site
  replicas: 3
  template:
    metadata:
      labels:
        app: ayane-utau-site
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          image: registry.uniproject.jp/ayane/ayane-utau-site:0.4.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: default-port
          resources:
            limits:
              memory: "3Gi"
              cpu: "2000m"
            requests:
              memory: "1Gi"
              cpu: "1000m"
