argoCD/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ayane-utau-site
spec:
  selector:
    app: ayane-utau-site
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
